# analyzer

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
analyzer/: agent.py  bot.py  bot_data_handler.py  common_prompts.py  config.py  config.yaml  custom_python_ast.py  data_reformat.py  db_manager.py  inline_keyboard_manager.py  interactor.py  msg_parser.py  processing.py
analyzer/agent/: agent.py  common_prompts.py  custom_output_parser.py  custom_python_ast.py  interactor.py  msg_parser.py  processing.py
analyzer/data/: memo.msg  sample_column.txt  Бованенково.XLSX
oil_analyzer/: agent.py  common_prompts.py  custom_output_parser.py  custom_python_ast.py  data_reformat.py  interactor.py  msg_parser.py  prompts.py
oil_analyzer/data/: data.json  memo2.msg
play/: interactor.py  kek.py
