[tool.poetry]
name = "mm-analyzer"
version = "0.1.0"
description = ""
authors = ["ennucore <ennucore@gmail.com>"]
readme = "README.md"
packages = [{include = "mm_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.162"
pandas = "^2.0.1"
tabulate = "^0.9.0"
openai = "^0.27.6"
datetime = "^5.1"
wolframalpha = "^5.0.0"
typer = "^0.9.0"
extract-msg = "^0.41.5"
openpyxl = "^3.1.2"
seaborn = "^0.12.2"
plotly = "^5.15.0"
pytelegrambotapi = "^4.12.0"
pymongo = "^4.4.0"
aiogram = "^2.25.1"
tiktoken = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
